# compliance-copilot-assistant

./: .gitignore
ingestion/: Makefile  __init__.py  api.py  app.py  main.py  pyproject.toml  setup.py  test_app.py
ingestion/api/: __init__.py  documents.py  health.py  ingestion.py  sources.py
ingestion/core/: __init__.py  config.py  logging.py  registry.py  storage.py
ingestion/core/registry/: __init__.py  file_manager.py  regional_manager.py  source_registry.py
ingestion/extractors/: __init__.py  html_extractor.py  pdf_extractor.py
ingestion/extractors/site_extractors/: __init__.py  base_site_extractor.py  generic_extractor.py  whitehouse_extractor.py
ingestion/fetchers/: __init__.py  base_fetcher.py
ingestion/fetchers/asia_pacific/: __init__.py
ingestion/fetchers/europe/: __init__.py  fetch_eu_ai_act.py  fetch_uk_gov.py
ingestion/fetchers/international/: __init__.py  fetch_fpf.py  fetch_international_reg.py
ingestion/fetchers/north_america/: __init__.py  fetch_canada_gov.py  fetch_nist.py  fetch_us_gov.py
ingestion/ingestion_functions/: __init__.py  client.py  job_orchestrator.py  schedulers.py  source_processor.py
ingestion/models/: __init__.py  document.py  ingestion.py  source.py
ingestion/parsers/: __init__.py  base_parser.py  html_parser.py  ocr_fallback.py  pdf_parser.py
ingestion/parsers/strategies/: __init__.py  base_html_strategy.py  beautifulsoup_strategy.py  playwright_strategy.py  trafilatura_strategy.py
ingestion/processors/: __init__.py  content_processor.py
ingestion/registry/sources/asia_pacific/singapore/: singapore_sources.yaml
ingestion/registry/sources/europe/eu/: eu_sources.yaml
ingestion/registry/sources/international/: international_sources.yaml
ingestion/services/: __init__.py  content_quality_service.py  document_service.py  ingestion_engine.py
ingestion/workflows/: __init__.py  compliance_workflow.py  scheduled_workflow.py
(+3 files in other folders)
